<resources>
    <string name="app_name">Открытки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_heading">Создать открытку</string>
    <string name="home_title">Главная</string>
    <string name="library_title">Библиотека</string>
    <string name="library_heading">Мои открытки</string>
    <string name="male_title">Мужской</string>
    <string name="female_radio">Женский</string>
    <string name="genderLabel">Пол</string>
    <string name="new_card">Новая открытка</string>
    <string name="placeholder_card">Название открытки</string>
    <string name="plaheholder_name">Имя и фамилия</string>
    <string name="create_button_text">Создать</string>
    <string name="base_api_url">http://congratulationsp.ru</string>
    <string name="api_pdf_path">api/pdf</string>
    <string name="api_presets">api/presets</string>
    <string name="deleteText">Удалить</string>
    <string name="saveText">Сохранить</string>
    <string name="shareText">Поделиться</string>
    <string name="api_preset">api/preset</string>
    <string name="share_description">Share</string>
</resources>