<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextCardName"
        style="@style/MyInput"
        android:layout_marginBottom="10sp"
        android:autofillHints=""
        android:hint="@string/placeholder_card"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/genderRadioGroup"
        android:text="@string/genderLabel"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20sp"
            android:checked="true"
            android:text="@string/male_title"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radio"
            android:textSize="20sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextPersonName"
        style="@style/MyInput"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/plaheholder_name" />
</LinearLayout>